--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ h1 {
     text-align: center;
     /*margin-top: 20%;*/
 }
+
+h2 {
+  font-family:'Abel', sans-serif;
+  color: red;
+  text-align: center;
+  position: relative;
+  top: 30px;
+}
+
 canvas {
 display: block;
 margin-top: 200px;
